# Image-Processing-Scaling-Project

./: CMakeLists.txt  README.md  main.cpp  results.csv  results.txt  results_after.csv  results_after.txt
src/: interpolation.cpp  interpolation.h  testing.cpp  testing.h
test_results/: results.csv  results.txt
